fl#valid_tests/tests/valid/itm.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#valid#itm
  RET
    success
    fail
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/valid/itm"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY valid#itm BEGIN

  END

  ACTION_PHP_EACH valid#itm AS file => desc BEGIN
    LAF test_valid STR_VAR file = EVAL "%file_root%/%file%.itm" desc RET success fail END
  END
END

LAF fl#valid_tests#tests#valid#itm RET success fail END
