fl#valid_tests/tests/invalid/are.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#are
  RET
    success
    fail
    failed_invalidity_tests
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/are"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#are BEGIN
    "nosig", "signature" => "Plain AREA V1.0 with erased signature and version"
    "null", "empty buffer" => "File of zero length"
    "nover", "signature" => "Plain AREA V1.0 with erased version"
    "dmghd", "minimum size" => "Plain AREA V1.0 with 0x20 bytes deleted at offset 0x10"
    "wrngoff", "offset too low" => "Plain AREA V1.0 with 0x110 bytes deducted from offset 0x5c"
    "wrngoff2", "offset too high" => "Plain AREA V1.0 with 0x220 bytes added to offset 0x5c"
    //"wrngoff3", "don't know yet" => "Plain AREA V1.0 with 0x110 bytes added to offset 0x5c; offsets points into another structure"
  END

  ACTION_PHP_EACH invalid#are AS key => desc BEGIN
    LAF test_invalid
      STR_VAR
        file = EVAL "%file_root%/%key_0%.are"
        fail_mode = EVAL "%key_1%"
        desc
      RET
        fail
        success
        failed_invalidity_tests
    END
  END
END

LAF fl#valid_tests#tests#invalid#are RET success fail failed_invalidity_tests END
